--- a/Lessons/27/assets/css/style.css
+++ b/Lessons/27/assets/css/style.css
@@ -1,49 +1,31 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 body{
-    width: 100%;
+    background-color: #90a2af;
+}
+.container{
+    width: 80%;
     margin: 0 auto;
-    background-color: #d1bb59;
 }
-.task_1, .task_2, .task_4{
-    width: 95%;
+.task1_center{
+    width: 50%;
+    height: 200px;
     margin: 0 auto;
-    margin-bottom: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
 }
-.shop{
-    width: 30%;
-    height: 250px;
-    padding: 15px;
-    border: 2px solid #148956;
-    box-sizing: border-box;
+.task2_center{
+    width: 80%;
+    height: 200px;
+    margin: 0 auto;
 }
-.check{
-    width: 25%;
-    height: 250px;
-    padding: 15px;
-    border: 2px solid #148956;
-    box-sizing: border-box;
+.task3_center{
+    width: 50%;
+    height: 300px;
+    margin: 0 auto;
 }
-.academy{
-    width: 28%;
-    height: 270px;
-    padding: 15px;
-    border: 2px solid #148956;
-    box-sizing: border-box;
-}
-.academy_second{
-    width: 15%;
-    height: 270px;
-    padding: 15px;
-    border: 2px solid #148956;
-    box-sizing: border-box;
-}
-h2{
-    color: #083622;
-    text-align: center;
-}
-.without{
-    list-style-type: none;
+.task1, .task2, .task3{
+    border: 1px solid #d86624;
+    border-radius: 10px;
 }
