--- a/Lessons/28/assets/css/style.css
+++ b/Lessons/28/assets/css/style.css
@@ -3,29 +3,111 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+html, body{
+width: 100%;
+height: 100%;
+}
+
 body{
-    background-color: #90a2af;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #173613;
+}
+
+#modal_shadow{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 999;
+}
+
+#my_window{
+    background-color: #fff;
+    border-radius: 5px;
+    width: 40%;
+    position: fixed;
+    top:50%;
+    left: 50%;
+    z-index: 1000;
+    transform: translate(-50%, -50%);
+}
+#window_header{
+    height: 40px;
+    line-height: 40px;
+    background-color: #a8a6a6;
+    border-radius: 5px 5px 0 0;
+    text-align: center;
+}
+.window_header_title{
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+#window_close{
+	background: #606061;
+    color: #FFFFFF;
+    font-size: 30px;
+    line-height: 30px;
+    padding-bottom: 5px;
+	position: absolute;
+	right: -12px;
+	text-align: center;
+	top: -10px;
+	width: 33px;
+	text-decoration: none;
+	font-weight: bold;
+	border-radius: 50%;
+	box-shadow: 1px 1px 3px #000;
+}
+#window_close:hover{
+    background-color: #28282b;
+    color: red;
+    opacity: 1;
+}
+#window_body{
+    text-align: center;
+    padding: 20px;
+    color: #252525;
+    background-color: #e9dfdf;
 }
 .container{
-    width: 80%;
-    margin: 0 auto;
-}
-.task1_center{
-    width: 50%;
-    height: 200px;
-    margin: 0 auto;
-}
-.task2_center{
-    width: 80%;
-    height: 200px;
-    margin: 0 auto;
-}
-.task3_center{
-    width: 50%;
-    height: 300px;
+    width: 70%;
+    display: flex;
     margin: 0 auto;
 }
 .task1, .task2, .task3{
-    border: 1px solid #d86624;
-    border-radius: 10px;
+    width: 30%;
+    height: 100px;
+    margin: 20px;
+    border: 2px solid #578946;
+    padding: 30px;
+    text-align: center;
+}
+#task1_rez{
+    width: 64%;
+    margin: 0 auto;
+}
+button{
+    width: 200px;
+    height: 50px;
+    background-color: aquamarine;
+    font-weight: 700;
+    font-size: 20px;
+}
+.task3 a{
+    font-weight: 700;
+    font-size: 20px;
+    text-decoration: none;
+    text-shadow: 2px 3px aquamarine;
+}
+
+
+@media screen and (max-width:400px){
+    #my_window{
+        width: 320px;
+        margin-left: 160px;
+    }
 }
