--- a/Lessons/15/1/assets/css/style.less
+++ b/Lessons/15/1/assets/css/style.less
@@ -19,6 +19,7 @@
         background-size: cover;
         background-repeat: no-repeat;
         position: relative;
+        overflow: hidden;
         header{
             padding: 0 10%;
             margin: 0 auto;
@@ -50,6 +51,56 @@
                     text-decoration: none;
                     color: @color_dark_part2;
                 }
+            }
+            .menu-icon {
+                z-index: 19;
+                position: relative;
+                display: none;
+                width: 30px;
+                height: 30px;
+                cursor: pointer;
+            } 
+            .menu-icon-line {
+                position: relative;
+                width: 30px;
+                height: 5px;
+                background-color: @color_dark_part2;
+            } 
+            .menu-icon-line::before {
+                position: absolute;
+                left: 0;
+                top: -10px;
+                content: '';
+                width: 30px;
+                height: 5px;
+                background-color: @color_dark_part2;
+                transition: transform 0.2s ease-in, top 0.2s linear 0.2s;
+            } 
+            .menu-icon-line::after {
+                position: absolute;
+                left: 0;
+                top: 10px;
+                content: '';
+                width: 30px;
+                height: 5px;
+                background-color: @color_dark_part2;
+                transition: transform 0.2s ease-in, top 0.2s linear 0.2s;
+            } 
+            .menu-icon.menu-icon-active .menu-icon-line {
+                background-color: transparent;
+            }
+            .menu-icon.menu-icon-active .menu-icon-line::before {
+                transform: rotate(45deg);
+                top: 0;
+                transition: top 0.2s linear, transform 0.2s ease-in 0.2s;
+            } 
+            .menu-icon.menu-icon-active .menu-icon-line::after {
+                transform: rotate(-45deg);
+                top: 0;
+                transition: top 0.2s linear, transform 0.2s ease-in 0.2s;
+            }
+            .mobile-nav{
+                display: none;
             }
         }
         .info{
@@ -589,6 +640,9 @@ span{
 }
 
 @media screen and (max-width: 1024px){
+    .part_1 .top header li > a {
+        margin-right: 20px;
+    }
     .part_1 .top .info button{
         margin-bottom: 50px;
     }
@@ -659,6 +713,62 @@ span{
     }
 }
 @media screen and (max-width: 800px){
+    .part_1 .top header{
+        padding: 0 0 0 50px;
+        line-height: 100px;
+        width: 100%;
+        margin-bottom: 50px;
+    }
+    .part_1 .top header ul.menu{
+        display: none;
+    }
+    .part_1 .top header .mobile-nav {
+        display: block;
+    }
+    .part_1 .top header ul.mobile-nav__list{
+        display: block;
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+    }
+    .part_1 .top header .mobile-nav__item{
+        margin-bottom: 20px;
+        line-height: 30px;
+    }
+    .part_1 .top header .mobile-nav__link{
+        color: #fff;
+    }
+    .part_1 .top header .mobile-nav__link:hover {
+        border-top: 3px solid @color_part_1;
+        padding-top: 5px;
+    }
+    .mobile-nav{
+        z-index: 9;
+        display: block;
+        position: absolute;
+        right: -350px;
+        top: 0;
+        height: 100%;
+        width: 350px;
+        background-color: @color_part_1;
+        text-align: center;
+        transition: transform 0.4s ease-in;
+    }
+    .mobile-nav--active{
+        transform: translateX(-100%);
+    }
+    .mobile-nav__title{
+        font-size: 28px;
+        font-weight: 800;
+        color: #fff;
+        line-height: 90px;
+    }
+    .part_1 .top header .menu-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 30px;
+    }
     .part_1 .top header li > a {
         font-size: 16px;
         margin-right: 10px;
@@ -698,12 +808,6 @@ span{
         width: 150px;
         height: 25px;
         font-size: 16px;
-    }
-    .part_1 .top header{
-        padding: 0 0 0 50px;
-        line-height: 100px;
-        width: 100%;
-        margin-bottom: 50px;
     }
     .part_1 .top .info p {
         margin: 0;
@@ -838,9 +942,6 @@ span{
     .part_1 .top header ul {
         flex-direction: column;
     }
-    .part_1 .top header {
-        line-height: 40px;
-    }
     .part_2 h2 {
         font-size: 34px;
     }
@@ -930,14 +1031,17 @@ span{
         font-size: 14px;
     }
 }
-@media screen and (max-width:400px){
+@media screen and (max-width:320px){
     .part_2 .main {
         width: 100%;
-        height: 470px;
+        height: 550px;
     }
     .part_2 h2 {
-        font-size: 27px;
-        line-height: 150px;
+        font-size: 24px;
+        line-height: 175px;
+    }
+    .part_2 .service {
+        width: 77%;
     }
     .part_2 .tomato {
         background-size: 75%;
@@ -951,9 +1055,12 @@ span{
         width: 45%;
     }
     .part_5 .first, .part_5 .second, .part_5 .third {
-        height: 220px;
+        height: 200px;
     }
     .part_6 .left, .part_6 .right {
-        padding: 0 10px;
+        padding: 0 9px;
+    }
+    .part_6 .header {
+        width: 95%;
     }
 }
